# IMU_node

CAUV_IMU/: CAUV_IMU.vcxproj
ig500Minimal/lib/include/sbgCom/: sbgCom.h  sbgComVersion.h
ig500Minimal/lib/include/sbgCom/comWrapper/: comWrapper.h
ig500Minimal/lib/include/sbgCom/protocol/: commands.h  commandsCalib.h  commandsExt.h  commandsFilter.h  commandsNav.h  commandsOdo.h  commandsOrientation.h  commandsOutput.h  commandsSync.h  protocol.h  protocolOutput.h  protocolOutputMode.h
ig500Minimal/lib/include/sbgCom/protocol/extDevices/: extIg.h  extNmea.h
ig500Minimal/lib/lib/: sbgComSerial.lib  sbgComSeriald.lib
ig500Minimal/projects/unix/: Makefile.am  Makefile.in  configure  configure.in
ig500Minimal/projects/visual/: UpgradeLog.htm  ig500Minimal.VC.db  ig500Minimal.vcproj  ig500Minimal.vcxproj
ig500Minimal/projects/visual/Backup/: ig500Minimal.sln
ig500Minimal/projects/visual/Debug/: ig500Minimal.ilk  vc140.idb
ig500Minimal/projects/visual/Debug/ig500Minimal.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ig500Minimal.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ig500Minimal/projects/xcode/ig500Minimal.xcodeproj/: project.pbxproj
ig500Minimal/src/: ig500Minimal.c
